[tool.poetry]
name = "sample-prep"
version = "0.1.0"
description = "Remove silence from percussive samples, normalize and write norm/high/low versions"
authors = ["Stream Punk <glad.car1474@fastmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
librosa = "^0.9.1"
SoundFile = "^0.10.3"
llvmlite = "^0.38.0"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sample-prep = 'sample_prep:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
